# Surgical_Sim

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: surgical_sim_moveit.yaml  ur_sim_controllers.yaml
launch/: surgical_sim.launch.py  ur_moveit_sim.launch.py
surgical_sim/: metrics_logger.py  pose_publisher.py  surgical_controller.py
worlds/: surgical_table.world
